--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -3,6 +3,9 @@
 {% include head.html %}
 <body>
 
+<br><br>
+<img src="assets/logo512.png" width="128" height="128" alt="Mijn Baby Joy logo">
+
 <main>
 {{ content }}
 </main>
