--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -1,2 +1,3 @@
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-64605794-2"></script>
 <script src="{{ 'src/ga.js' | relative_url }}" type="text/javascript"></script>
+<script src="{{ 'src/main.js' | relative_url }}" type="text/javascript"></script>
