--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,10 +3,15 @@
 {% include head.html %}
 <body>
 
+{% include header.html %}
+
 <main>
 {{ content }}
 </main>
 
+{% include footer.html %}
+
 {% include scripts.html %}
+
 </body>
 </html>
