header and footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
 <footer>
-	<img src="{{ 'assets/babyfeet.jpg' | relative_url }}" alt="" width="150" height="150">
+	<img src="{{ 'assets/babyfeet.jpg' | relative_url }}" alt="">
 
 	<nav class="inner">
 		<ul class="main">
@@ -19,6 +19,9 @@
 				</li>
 			{% endif %}
 			{% endfor %}
+			<li>
+				<a href="mailto:inekebaaij@gmail.com">inekebaaij@gmail.com</a>
+			</li>
 		</ul>
 	</nav>
 </footer>
