page contents and layout

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,7 +1,7 @@
 <head>
 
 	{% if page.url == "/" %}
-		<title>Ineke Baaij Babymassage</title>
+		<title>Mijn Baby Joy - Ineke Baaij Babymassage</title>
 	{% else %}
 		<title>{{ page.title }} - Ineke Baaij Babymassage</title>
 	{% endif %}
