--- a/src/main.scss
+++ b/src/main.scss
@@ -55,6 +55,12 @@ main {
 	max-width: 32rem;
 	margin: 0 auto;
 	padding: 0 1rem;
+
+	@media (max-width: 480px) {
+		font-size: 16px;
+	}
+
+
 	&.content {
 		text-align: left;
 	}
