update rgdb links

--- a/src/main.scss
+++ b/src/main.scss
@@ -93,8 +93,8 @@ main {
 		width: 6rem*$ratio2;
 		height: 6rem*$ratio2;
 		border-radius: 100%;
-		max-height: 6rem*$ratio*$ratio2;
-		max-width: 6rem*$ratio*$ratio2;
+		max-height: 6rem*$ratio2;
+		max-width: 6rem*$ratio2;
 		margin: 0 auto;
 		display: block;
 		box-shadow: 0 0 1px rgba(0,0,0,0.3);
@@ -103,6 +103,8 @@ main {
 		width: unset;
 		height: unset;
 		border-radius: unset;
+		display: inline-block;
+		box-shadow: none;
 	}
 }
 
@@ -192,6 +194,11 @@ footer {
 	border-top: 1px solid #eee;
 
 	img {
+		max-width: 6rem;
+		max-height: 6rem;
+		margin-top: 1rem*$ratio;
+	}
+	> img {
 		border-radius: 100%;
 		width: 6rem;
 		height: 6rem;
