--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -11,6 +11,10 @@
 			{% endif %}
 			{% endfor %}
 		</ul>
+		<a href="https://opleiding-babymassage.nl/rgdb/docent-zoeken">
+			<img src="{{ '/assets/rgdb.png' | relative_url }}">
+			<img src="{{ '/assets/rgdb2.png' | relative_url }}">
+		</a>
 		<ul class="sub">
 			{% for item in site.pages %}
 			{% if item.category == "sub" %}
